- Startup script added - Instalation Makefile added - Definition for the rpm creation added - Configuration example updated

--- a/spineld.conf
+++ b/spineld.conf
@@ -16,7 +16,13 @@
 # Example:
 #                  
 # calc L1_L2_sum   %{L1_value} + %{L2_value}
-
+#
+# The special expression could be used for cumulative values. This values 
+# coul by computed by accumulate acc(<expr>). The meaning ofthe acc function is
+# acc(<expr>) = <result value of the previous step> + <expr>/<number of seconds since the prevous step>
+# 
+#
+#
 
 #        name        IP address      :port     RS485  channel conversion   
 #                                             address sens    expression
