--- a/spineld.conf
+++ b/spineld.conf
@@ -8,14 +8,14 @@
 #
 # OR
 # 
-# calc             - keyword for calculated value
+# expr             - keyword for calculated value
 # name             - unique name identificator
 # <expr>           - expression to evaluate. In expression any source or calc identicicator could be used. 
 #                    Identificator must be written in %{name} expression 
 #        
 # Example:
 #                  
-# calc L1_L2_sum   %{L1_value} + %{L2_value}
+# expr L1_L2_sum   %{L1_value} + %{L2_value}
 #
 # The special expression could be used for cumulative values. This values 
 # coul by computed by accumulate acc(<expr>). The meaning ofthe acc function is
@@ -29,7 +29,7 @@
 #
 
 
-# prevodniky 0x1 jsou v rozsahu 0 az 30V
+# converters 0x1 jsou v rozsahu 0 az 30V
 source pwr_1         147.229.255.122:10001     0x1    1     x/300          # AC source 1
 source pwr_2         147.229.255.122:10001     0x1    2     x/300          # AC source 2
 source pwr_3         147.229.255.122:10001     0x1    3     x/300          # AC source 3
@@ -68,7 +68,7 @@ expr    on_gen	  (abs(%{mdo_u.L1} - %{do_u.L1}) > 3 || \
 				   abs(%{mdo_u.L3} - %{do_u.L3})) > 3 ? 1 : 0
 
 
-# prikony
+# power
 expr    mdo_p     %{mdo_i.L1} * %{mdo_u.L1} +  %{mdo_i.L2} * %{mdo_u.L2} +  %{mdo_i.L3} * %{mdo_u.L3} # [W] Power MDO
 expr    do_p      %{do_i.L1}  * %{do_u.L1} + %{do_i.L2}  * %{do_u.L2}  +  %{do_i.L3}  * %{do_u.L3}  # [W] Ppower DO
 
