- future notice added

--- a/spineld.conf
+++ b/spineld.conf
@@ -17,6 +17,8 @@
 #                  
 # expr L1_L2_sum   %{L1_value} + %{L2_value}
 #
+# The follow cunctionality is planned fo the future. The code is not implemented yet. 
+#
 # The special expression could be used for cumulative values. This values 
 # coul by computed by accumulate acc(<expr>). The meaning ofthe acc function is
 # acc(<expr>) = <result value of the previous step> + <expr>/<number of seconds since the prevous step>
